@@ -2,25 +2,31 @@ package com.cydeo.service.impl;
 
 import com.cydeo.dto.CategoryDto;
 import com.cydeo.dto.CompanyDto;
+import com.cydeo.dto.ProductDto;
 import com.cydeo.entity.Category;
 import com.cydeo.repository.CategoryRepository;
 import com.cydeo.service.CategoryService;
 import com.cydeo.service.CompanyService;
+import com.cydeo.service.ProductService;
 import com.cydeo.util.MapperUtil;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class CategoryServiceImpl implements CategoryService {
     private final CategoryRepository categoryRepository;
     private final MapperUtil mapperUtil;
-      private final CompanyService companyService;
+    private final CompanyService companyService;
+    private final ProductService productService;
 
-    public CategoryServiceImpl(CategoryRepository categoryRepository, MapperUtil mapperUtil, CompanyService companyService) {
+    public CategoryServiceImpl(CategoryRepository categoryRepository, MapperUtil mapperUtil, CompanyService companyService, ProductService productService) {
         this.categoryRepository = categoryRepository;
         this.mapperUtil = mapperUtil;
         this.companyService = companyService;
+        this.productService = productService;
     }
 
     @Override
@@ -41,7 +47,13 @@ public class CategoryServiceImpl implements CategoryService {
     public List<CategoryDto> listCategoryByCompany() {
         Long companyId = companyService.getCompanyDtoByLoggedInUser().getId();
         return categoryRepository.findByCompanyIdOrderByDescriptionAsc(companyId).stream()
-                .map(category -> mapperUtil.convert(category, new CategoryDto())).toList();
+                .map(category -> {
+                    CategoryDto categoryDto = mapperUtil.convert(category, new CategoryDto());
+                    List<ProductDto> product = productService.findAllByCategory(category);
+                    categoryDto.setHasProduct(!product.isEmpty());
+                    return categoryDto;
+                })
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -66,5 +78,10 @@ public class CategoryServiceImpl implements CategoryService {
                 .noneMatch(category -> category.getDescription().trim().equalsIgnoreCase(description.trim()));
     }
 
+    public void delete(Long id) {
+        Category category = categoryRepository.findById(id).orElseThrow(IllegalArgumentException::new);
+        category.setIsDeleted(true);
+        categoryRepository.save(category);
+    }
 
 }
